--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     },
     "dependencies": {
         "axios": "^0.20.0",
+        "cache-loader": "^4.1.0",
         "core-js": "^3.6.5",
         "lodash": "^4.17.20",
         "moments": "0.0.2",
         "vee-validate": "^3.3.9",
         "vue": "^2.6.11",
         "vue-router": "^3.2.0",
-        "vuex": "^3.4.0"
+        "vuex": "^3.5.1"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.5.0",
